# ai-novel2script

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: market_research.md  release_checklist.md  yaml_schema.md
examples/: long_adaptation_case.txt  three_chapters.txt
schemas/: script.schema.json
scripts/: check_release_readiness.py  check_release_tag.py  smoke_web_server.py
src/novel2script/: __init__.py  __main__.py  ai_provider.py  chapter_parser.py  cli.py  converter.py  file_io.py  fountain.py  heuristics.py  markdown.py  models.py  schema.py  yaml_io.py
src/novel2script/schemas/: script.schema.json
src/novel2script/web/: __init__.py  __main__.py
src/novel2script/web/static/: app.css  app.js  index.html
tests/: test_adaptation_quality.py  test_ai_provider.py  test_chapter_parser.py  test_cli.py  test_converter.py  test_file_io.py  test_fountain.py  test_markdown.py  test_packaging.py  test_release_readiness.py  test_release_tag.py  test_repository_operations.py  test_schema.py  test_web.py  test_workflows.py
