[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "novel2script"
version = "0.1.0"
description = "AI-assisted tool for converting multi-chapter novels into editable screenplay YAML drafts."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
  "novel",
  "screenplay",
  "scriptwriting",
  "fountain",
  "yaml",
  "adaptation",
  "creative-writing"
]
authors = [
  { name = "1want2beaQuant" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Natural Language :: Chinese (Simplified)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Artistic Software",
  "Topic :: Text Processing",
  "Topic :: Utilities"
]
dependencies = [
  "jsonschema>=4.22.0",
  "PyYAML>=6.0.1"
]

[project.optional-dependencies]
ai = [
  "openai>=1.30.0"
]
dev = [
  "openai>=1.30.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "tomli>=2.0.1; python_version<'3.11'"
]
release = [
  "build>=1.2.0",
  "twine>=5.1.0"
]
security = [
  "pip-audit>=2.7.0"
]

[project.urls]
Homepage = "https://github.com/1want2beaQuant/ai-novel2script"
Repository = "https://github.com/1want2beaQuant/ai-novel2script"
Documentation = "https://github.com/1want2beaQuant/ai-novel2script#readme"
Issues = "https://github.com/1want2beaQuant/ai-novel2script/issues"

[project.scripts]
novel2script = "novel2script.cli:main"
novel2script-web = "novel2script.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
novel2script = ["schemas/*.json"]
"novel2script.web" = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
